Camino only - Bug 303628: prevent spaces in keyword fields. r=cl sr=pink